# aitomia

./: .gitignore  LICENSE  NOTICE  README.md  main.py  pyproject.toml  requirements.txt
aitomia_agents/: .env.example  README.md  __init__.py  __main__.py  agent_cards.py  agent_template.py  aitomia.py  aitomia_pcp.py  chat.py  cli.py  excited_state_sp.py  file_manager.py  frequency.py  initial_conditions.py  ir.py  ir_static.py  irc.py  judge_calculation.py  label_database.py  logger.py  method_confirm.py  method_judge.py  optimize_geometry.py  planner.py  prepare_molecular_database.py  prepare_molecule.py  rag.py  raman.py  raman_static.py  reaction.py  settings.py  single_point.py  states.py  subtask_type.py  task_type.py  transition_state.py  user_context.py  utils.py
aitomia_agents/excited_state_agents/: uvvis_planner.py  uvvis_spc.py
docs/: example_session.md
docs/example_session/: transcript.txt
docs/example_session/geometry_optimization/: optmol.json  opttraj.xyz  run_geomopt.py  summary.out
docs/example_session/ir_spectrum/: irmol.json  molecule0.vibspectrum  run_ir.py  summary.out
examples/: run_calculation.py
examples/molecules/: ethanol.xyz  water.xyz
